--- a/teamcostco/src/main/resources/templates/common/footer.html
+++ b/teamcostco/src/main/resources/templates/common/footer.html
@@ -1,62 +1,44 @@
-<footer class="site-footer">
-    <h2 class="footer-title">코스트코 고객센터</h2>
-    
-    <!-- 코스트코 소개 -->
-    <div class="footer-column-wrap">
-        <div class="footer-column">
-            <h3 class="footer-heading">코스트코 소개</h3>
-            <ul class="footer-list">
-                <li><a href="#" class="footer-link">코스트코는?</a></li>
-                <li><a href="#" class="footer-link">제품분류 & 서비스</a></li>
-                <li><a href="#" class="footer-link">채용</a></li>
-            </ul>
-        </div>
-
-        <!-- 코스트코 멤버십 -->
-        <div class="footer-column">
-            <h3 class="footer-heading">코스트코 멤버십</h3>
-            <ul class="footer-list">
-                <li><a href="#" class="footer-link">회원가입</a></li>
-                <li><a href="#" class="footer-link">회원권 갱신</a></li>
-                <li><a href="#" class="footer-link">온라인등록</a></li>
-                <li><a href="#" class="footer-link">마이페이지</a></li>
-                <li><a href="#" class="footer-link">주문내역</a></li>
-                <li><a href="#" class="footer-link">제휴신용카드</a></li>
-            </ul>
-        </div>
-
-        <!-- 고객센터 -->
-        <div class="footer-column">
-            <h3 class="footer-heading">고객센터</h3>
-            <ul class="footer-list">
-                <li><a href="#" class="footer-link">문의(전화/이메일)</a></li>
-            </ul>
-        </div>
-
-        <!-- 매장 & 서비스 -->
-        <div class="footer-column">
-            <h3 class="footer-heading">매장안내</h3>
-            <ul class="footer-list">
-                <li><a href="#" class="footer-link">매장안내</a></li>
-            </ul>
-        </div>
+<footer>
+  <h2>코스트코 고객센터</h2>
+  <div class="column_wrap">
+    <div class="column">
+      <h3>코스트코 소개</h3>
+      <ul>
+        <li><a href="#">코스트코는?</a></li>
+        <li><a href="#">제품분류 &amp; 서비스</a></li>
+        <li><a href="#">채용</a></li>
+      </ul>
     </div>
-
-    <div class="footer-bottom">
-        <p>
-            <a href="#" class="footer-bottom-link">사이트맵</a> | 
-            <a href="#" class="footer-bottom-link">이용약관</a> | 
-            <a href="#" class="footer-bottom-link">개인정보처리방침</a> | 
-            <a href="#" class="footer-bottom-link">영상정보처리기기운영·관리방침</a> | 
-            <a href="#" class="footer-bottom-link">상표 사용 지침</a>
-        </p>
-        <p>
-            (주)팀코스트코 | 00000 노원 | 대표자: 전상민 | 사업자 등록번호: 000-00-00000 | 
-            통신판매업 신고번호: 제0000-노원이젠-0001호 | 전화: 0000-0000 | 
-            E-mail: <a href="#" class="footer-bottom-link">고객센터 문의 바로가기</a> | 
-            <a href="#" class="footer-bottom-link">매장/온라인</a> | 개인정보 보호책임자: 한신
-        </p>
-       
-        <p>ⓒ 1999 - 2024 Costco Wholesale Corporation. All Rights Reserved.</p>
+    <div class="column">
+      <h3>코스트코 멤버십</h3>
+      <ul>
+        <li><a href="#">회원가입</a></li>
+        <li><a href="#">회원권 갱신</a></li>
+        <li><a href="#">온라인등록</a></li>
+        <li><a href="#">마이페이지</a></li>
+        <li><a href="#">주문내역</a></li>
+        <li><a href="#">제휴신용카드</a></li>
+      </ul>
     </div>
+    <div class="column">
+      <h3>고객센터</h3>
+      <ul>
+        <li><a href="#">문의(전화/이메일)</a></li>
+      </ul>
+    </div>
+    <div class="column">
+      <h3>매장안내</h3>
+      <ul>
+        <li><a href="#">매장안내</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer_bottom">
+    <p><a href="#">사이트맵</a> | <a href="#">이용약관</a> | <a href="#">개인정보처리방침</a> | <a href="#">영상정보처리기기운영·관리방침</a> | <a
+        href="#">상표 사용 지침</a></p>
+    <p>(주)팀코스트코 | 00000 노원 | 대표자: 전상민 | 사업자 등록번호: 000-00-00000 | 통신판매업 신고번호: 제0000-노원이젠-0001호 | 전화: 0000-0000 | E-mail:
+      <a href="#">고객센터 문의 바로가기</a> | <a href="#">매장/온라인</a> | 개인정보 보호책임자: 한신</p>
+    <p>ⓒ 1999 - 2024 Costco Wholesale Corporation. 모든 권리 보유.</p>
+  </div>
 </footer>
