--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${(pageTitle ?: 'No-Title')}"></title>
     <link rel="stylesheet" href="/fonts/Material_Symbols_Outlined.woff2">
+    <link rel="preload" as="style" href="/css/common/noto-sans-kr.css">
+    <link rel="stylesheet" href="/css/common/noto-sans-kr.css">
     <link rel="stylesheet" href="/css/common/styles.css">
     <link rel="stylesheet" href="/css/component/category_header_bar.css">
     <link rel="stylesheet" href="/css/component/sidebar.css">
