메인화면, 상품결제 페이지 추가

--- a/teamcostco/src/main/resources/templates/purchase/purchase.html
+++ b/teamcostco/src/main/resources/templates/purchase/purchase.html
@@ -1,3 +1,70 @@
-<div class="main_wrap">
 
+<div class="main_wrap">
+    <div class="order-container">
+        <div class="left">
+            <!-- 주문자 정보 -->
+            <div class="shipping-info">
+            <div class="section-title">주문자 정보</div>
+            <div class="input-box">
+                <label>황지영</label>
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="010-9448-9748">
+            </div>
+            </div>
+            <!-- 배송지 정보 -->
+            <div class="shipping-info">
+                <div class="section-title">배송지</div>
+                <div class="input-box">
+                <label>황지영</label>
+                </div>
+                <div class="input-box">
+                <input type="text" placeholder="서울특별시 노원구 동일로215길 48 (상계주공3단지아파트)">
+                </div>
+                <div class="input-box">
+                        <select>
+                        <option>배송시 요청사항을 선택해 주세요.</option>
+                        <option>직접 수령하겠습니다.</option>
+                        <option>배송 전 연락바랍니다.</option>
+                        <option>부재 시 경비실에 맡겨주세요.</option>
+                        <option>부재 시 문 앞에 놓아주세요.</option>
+                        <option>부재 시 택배함에 넣어주세요.</option>
+                        <option>직접 입력.</option>
+                        </select>
+                </div>
+                <div class="checkout-button">주소변경하기</div>
+            </div>
+        
+            <!-- 결제수단 -->
+            <div class="payment-method">
+            <div class="section-title">결제수단</div>
+            <div class="input-box">
+                <label>
+                <input type="radio" name="payment-method" checked> Pay 간편결제
+                </label>
+                <label>
+                    <input type="radio" name="payment-method" checked> 무통장입금
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- 주문상품 -->
+    <div class="right">
+        <div class="order-summary">
+            <p>주문상품 1개</p>
+            <img src="https://via.placeholder.com/60" alt="product image">
+            <p>브리스트리(에코 유아 어린이 칫솔)</p>
+            <p>46,390원</p>
+            </div>
+            <div class="price-details">
+            <p><span>상품금액</span><span>55,440원</span></p>
+            <p><span>할인금액</span><span>-9,050원</span></p>
+            <p class="total"><span>총 결제금액</span><span>46,390원</span></p>
+            </div>
+            <div class="checkout-button">결제하기</div>
+            <div class="checkbox">
+            <input type="checkbox"> 개인정보 제공 동의
+        </div>
+    </div>
 </div>
