--- a/teamcostco/src/main/resources/static/css/contents/intro.css
+++ b/teamcostco/src/main/resources/static/css/contents/intro.css
@@ -1,74 +1,26 @@
-.bar {
-    font-size: 15px;
-    background-color: #fff;
-    padding: 5px;
-    border-bottom: 1px solid #eaeaea;
-    text-align: center;
-    line-height: 50px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-link {
-    width: 50px;
-    height: 50px;
+.slideshow-container {
+    margin: 30px 0 10px 0;
     position: relative;
-    font-size: 15px;
-    margin: 10px;
-    text-align: center;
-    line-height: 50px;
-}
-
-nav {
-    display: inline-block;
-}
-
-nav a {
-    text-decoration: none;
-    color: #333;
-    margin: 0 15px;
-    font-size: 18px;
-}
-
-.icons {
-    font-size: 20px;
-}
-
-.icons i {
-    margin: 0 10px;
-    cursor: pointer;
-    font-size: 15px;
-}
-
-.slideshow {
-    margin: 0 auto;
-    position: relative;
+    max-width: 1100px;
+    /* 원하는 너비로 조정 가능 */
     width: 100%;
-    height: 100%;
 }
 
-.slide_area {
-    width: 50%;
-    height: 300px;
-    margin: 20px 0;
-}
-
-.slide-item {
-    width: 100%;
-    height: 100%;
+.slide {
     display: none;
 }
 
 img {
     width: 100%;
-    height: 100%;
+    height: 500px;
+    /* 모든 이미지에 고정 높이 */
     object-fit: cover;
+    /* 왜곡 없이 이미지가 영역을 채우도록 함 */
     border-radius: 10px;
 }
 
-
-.prev-button,
-.next-button {
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -80,115 +32,51 @@ img {
     border-radius: 0 3px 3px 0;
     user-select: none;
     transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.next-button {
+.next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
-.prev-button:hover,
-.next-button:hover {
+.prev:hover,
+.next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.column_wrap {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-}
-
-.column {
-    width: 23%;
-}
-
-h3 {
-    font-size: 1.2em;
-    color: #333;
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-ul li {
-    margin-bottom: 10px;
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-/* 추가된 스타일 */
-.pagination-dots {
+.dots {
+    width: 100%;
     text-align: center;
-    margin-top: 10px;
+    margin: 15px auto;
+    /* 음수 마진을 제거하고 적절한 간격 설정 */
 }
 
-.pagination-dot {
+.dot {
     height: 15px;
     width: 15px;
-    margin: 0 2px;
+    margin: 0 5px;
+    /* 도트 간의 간격 조정 */
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.pagination-dot.active {
+.dot:hover {
     background-color: #717171;
 }
 
-.featured-section {
+.active {
+    background-color: #717171;
+}
+
+.best,
+.sale {
     height: 50px;
     font-size: 20px;
-    margin: 10px;
+    margin: 20px;
     line-height: 50px;
     text-align: center;
-    /* 중앙 정렬 추가 */
-}
-
-.featured-link {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.featured-link:hover {
-    text-decoration: underline;
-}
-
-.sale-section {
-    height: 50px;
-    font-size: 20px;
-    margin: 10px;
-    line-height: 50px;
-    text-align: center;
-    /* 중앙 정렬 추가 */
-}
-
-.sale-link {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.sale-link:hover {
-    text-decoration: underline;
-}
-
-.intro_product {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
 }
