--- a/teamcostco/src/main/resources/templates/intro/intro.html
+++ b/teamcostco/src/main/resources/templates/intro/intro.html
@@ -1,31 +1,37 @@
 <div class="main_wrap">
 
-    <div class="slide_area">
-        <div class="slideshow">
-            <div class="slide-item">
-                <img src="/images/intro/intro_image_1.png" alt="슬라이드 2">
-            </div>
-            <div class="slide-item">
-                <img src="/images/intro/intro_image_2.png" alt="슬라이드 3">
-            </div>
+    <div class="slideshow-container">
+        <div class="slide">
+            <img src="https://jmagazine.joins.com/_data2/photo/2022/04/2041357502_Mrdjlbgm_1.jpg" alt="슬라이드 1">
+        </div>
+        <div class="slide">
+            <img src="https://api.card-gorilla.com:8080/storage/post/2855/contents/32933/card_1379_1.jpg" alt="슬라이드 2">
+        </div>
+        <div class="slide">
+            <img src="https://www.withbuyer.com/news/photo/201703/20170316_1_14294.jpg" alt="슬라이드 3">
+        </div>
+        <div class="slide">
+            <img src="https://www.seattlekdaily.com/news/photo/202403/8328_11187_037.png" alt="슬라이드 4">
+        </div>
 
-            <a class="prev-button" onclick="changeSlide(-1)">&#10094;</a>
-            <a class="next-button" onclick="changeSlide(1)">&#10095;</a>
-        </div>
-        <div class="pagination-dots">
-            <span class="pagination-dot" onclick="currentSlide(1)"></span>
-            <span class="pagination-dot" onclick="currentSlide(2)"></span>
-        </div>
+        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+        <a class="next" onclick="changeSlide(1)">&#10095;</a>
     </div>
 
-    <section class="intro_product">
-        <div class="featured-section">
-            <span>인기상품</span>
+    <!-- 추가된 인디케이터 -->
+    <div class="dots">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
 
-        </div>
-        <div class="sale-section">
-            <span>세일상품</span>
-        </div>
-    </section>
+    <!--인기 상품-->
+    <div class="best">
+        <a class="best">노트북</a>
+        <a class="sale">청소기</a>
+        <a class="sale">등등</a>
+    </div>
+
 
 </div>
