--- a/teamcostco/src/main/resources/templates/customer/shipping_address.html
+++ b/teamcostco/src/main/resources/templates/customer/shipping_address.html
@@ -5,7 +5,7 @@
     <div th:replace="~{/common/sidebar}"></div>
 
     <div id="content" class="content_section">
-        <div class="order_info" th:if="${defaultShippingAddress != null}">
+        <div class="default_address" th:if="${defaultShippingAddress != null}">
             <div class="title">
                 <h3>기본배송지</h3>
             </div>
