--- a/teamcostco/src/main/resources/static/css/common/footer.css
+++ b/teamcostco/src/main/resources/static/css/common/footer.css
@@ -12,7 +12,7 @@ footer {
     text-align: center;
     padding: 20px;
     background-color: #fff;
-    border-top: 1px solid #eaeaea;
+    border-top: 1px solid #eaeaff;
     font-size: 14px;
     color: #777;
 }
