--- a/teamcostco/src/main/resources/static/css/common/noto-sans-kr.css
+++ b/teamcostco/src/main/resources/static/css/common/noto-sans-kr.css
@@ -2,6 +2,7 @@
   font-family: "Noto Sans Korean";
   font-weight: 100; /* Thin */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Thin.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Thin.otf") format("opentype"),
        url("/fonts/NotoSans-Thin.woff") format("woff"),
@@ -12,6 +13,7 @@
   font-family: "Noto Sans Korean";
   font-weight: 300; /* Light */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Light.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Light.otf") format("opentype"),
        url("/fonts/NotoSans-Light.woff") format("woff"),
@@ -22,6 +24,7 @@
   font-family: "Noto Sans Korean";
   font-weight: 400; /* Regular */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Regular.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Regular.otf") format("opentype"),
        url("/fonts/NotoSans-Regular.woff") format("woff"),
@@ -32,17 +35,18 @@
   font-family: "Noto Sans Korean";
   font-weight: 500; /* Medium */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Medium.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Medium.otf") format("opentype"),
        url("/fonts/NotoSans-Medium.woff") format("woff"),
        url("/fonts/NotoSans-Medium.woff2") format("woff2");
 }
 
-
 @font-face {
   font-family: "Noto Sans Korean";
-  font-weight: 700;
+  font-weight: 700; /* Bold */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Bold.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Bold.otf") format("opentype"),
        url("/fonts/NotoSans-Bold.woff") format("woff"),
@@ -53,6 +57,7 @@
   font-family: "Noto Sans Korean";
   font-weight: 900; /* Black */
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/NotoSans-Black.eot?#iefix") format("embedded-opentype"),
        url("/fonts/NotoSans-Black.otf") format("opentype"),
        url("/fonts/NotoSans-Black.woff") format("woff"),
