--- a/teamcostco/src/main/resources/static/css/common/styles.css
+++ b/teamcostco/src/main/resources/static/css/common/styles.css
@@ -1,9 +1,14 @@
-* {
-    box-sizing: border-box;
-    font-family: "Noto Sans Korean", sans-serif;
+:root {
+    --background-sub-color: rgb(250, 250, 255);
 }
 
-span, p, a, ul, li, button, input{
+span,
+p,
+a,
+ul,
+li,
+button,
+input {
     font-weight: 400;
 }
 
@@ -14,8 +19,27 @@ span, p, a, ul, li, button, input{
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'material-symbols-outlined-fill';
+    src: url('/fonts/Material_Symbols_Outlined_Fill.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: "Noto Sans Korean", sans-serif;
+}
+
 .material-symbols-outlined {
     font-family: 'material-symbols-outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 18px;
+}
+
+.material-symbols-outlined-fill {
+    font-family: 'material-symbols-outlined-fill';
     font-weight: normal;
     font-style: normal;
     font-size: 18px;
@@ -27,6 +51,15 @@ body {
     padding: 0;
     margin: 0;
     min-width: 900px;
+}
+
+body {
+    opacity: 0;
+    transition: opacity 0.3s ease-in;
+}
+
+body.loaded {
+    opacity: 1;
 }
 
 html {
@@ -42,7 +75,7 @@ tbody {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
     margin-bottom: 40px;
 }
@@ -62,33 +95,13 @@ tbody {
 }
 
 main {
-    background-color: var(--background-sub-color);
+    background-color: rgb(250, 250, 255);
 }
 
 .page-title {
     padding: 0;
     margin-top: 0;
     margin-bottom: 20px;
-}
-
-.content-box {
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-    border-radius: 5px;
-    background-color: var(--background-color);
-    border: var(--border-line);
-    height: 100%;
-    gap: 15px;
-}
-
-#results tbody {
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-
-#results tbody.show {
-    opacity: 1;
 }
 
 
@@ -103,4 +116,17 @@ main {
 
 .flex-row-box.space-between {
     justify-content: space-between;
+}
+
+.go_top {
+    background-color: #fff;
+    border: 1px solid #eaeaff;
+    box-shadow: 0 0 5px rgba(0, 0, 50, 0.1);
+    padding: 5px;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    user-select: none;
+    cursor: pointer;
 }
