--- a/teamcostco/src/main/resources/static/css/contents/intro.css
+++ b/teamcostco/src/main/resources/static/css/contents/intro.css
@@ -1,7 +1,6 @@
 .slideshow-container {
-    margin: 30px 0 10px 0;
+    margin: 100px 0;
     position: relative;
-    max-width: 1100px;
     /* 원하는 너비로 조정 가능 */
     width: 100%;
 }
