--- a/teamcostco/src/main/resources/static/css/contents/search.css
+++ b/teamcostco/src/main/resources/static/css/contents/search.css
@@ -1,28 +1,32 @@
 .product_list_wrap {
-    display:flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width:100%;
+    width: 100%;
 }
 
 #search_title {
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
-    width:100%;
+    width: 100%;
     height: 70px;
     border-bottom: 1px solid lightgray;
-    font-size:20px;
+    font-size: 20px;
     font-weight: bold;
     padding: 20px;
     margin-bottom: 30px;
 }
 
-.product_list{
+.product_list {
     display: block;
     opacity: 0;
-    width:calc(100% - 200px);
+    width: calc(100% - 220px);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #eaeaff;
+    min-height: 520px;
 }
 
 .product_list.show {
@@ -31,35 +35,35 @@
 }
 
 .list_box {
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     height: auto;
-    gap:20px;
+    gap: 20px;
 }
 
-.product_item{
-    display:flex;
+.product_item {
+    display: flex;
     flex-direction: column;
     height: 350px;
-    gap:5px;
-    width:100%;
+    gap: 5px;
+    width: 100%;
     cursor: pointer;
 }
 
-.product_thumbnail{
-    width:100%;
-    height:100%;
+.product_thumbnail {
+    width: 100%;
+    height: 100%;
     opacity: 0.90;
 }
 
 .thumbnail_wrap {
     background-color: rgba(0, 0, 255, 0.3);
-   
+
 }
 
-.product_name{
-    width:100%;
-    font-size:14px;
+.product_name {
+    width: 100%;
+    font-size: 14px;
 }
 
 .product_price {
@@ -67,18 +71,18 @@
     font-weight: bold;
 }
 
-.discount{
-    color:red;
+.discount {
+    color: red;
 }
 
-.before_discount_price{
-    text-decoration:line-through;
-    color:lightgray;
-    font-size:12px;
+.before_discount_price {
+    text-decoration: line-through;
+    color: lightgray;
+    font-size: 12px;
 }
 
 .option_area {
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
@@ -86,21 +90,21 @@
 }
 
 #size {
-    padding:5px;
+    padding: 5px;
     outline: none;
-    border:1px solid lightgray;
+    border: 1px solid lightgray;
     cursor: pointer;
 }
 
 #show_more_btn {
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    color:rgb(82, 82, 82);
+    color: rgb(82, 82, 82);
     font-weight: bold;
-    background-color: #f5f5f5;
+    background-color: #eaeaff;
     user-select: none;
     cursor: pointer;
 }
