--- a/teamcostco/src/main/resources/static/css/contents/shipping_address.css
+++ b/teamcostco/src/main/resources/static/css/contents/shipping_address.css
@@ -6,20 +6,20 @@
 }
 
 /* 주문 정보 */
-.order_info {
+.default_address {
     background-color: #fff;
     padding: 15px;
-    border: 1px solid #e0e0e0;
+    border: 1px solid #eaeaff;
     margin-bottom: 20px;
 }
 
-.order_info .title {
+.default_address .title {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.order_info .title>h3 {
+.default_address .title>h3 {
     margin: 0 0 10px 0;
 }
 
@@ -35,7 +35,7 @@
     width: 80px;
 }
 
-.order_info .title p {
+.default_address .title p {
     font-size: 1.2em;
     font-weight: bold;
 }
@@ -49,11 +49,15 @@
 
 .data_table th,
 .data_table td {
-    border: 1px solid #e0e0e0;
+    border: 1px solid #eaeaff;
     padding: 10px;
     text-align: center;
     font-size: 13px;
     position: relative;
+}
+
+.data_table tbody {
+    background-color: #fff;
 }
 
 .data_table caption {
@@ -61,13 +65,12 @@
 }
 
 .data_table th {
-    background-color: #f4f4f4;
+    background-color: #eaeaff;
 }
 
 .sub_title {
     position: absolute;
     font-size: 10px;
-    font-weight: bold;
     color: #fff;
     border-radius: 3px;
     top: 0;
