--- a/teamcostco/src/main/resources/templates/common/sidebar.html
+++ b/teamcostco/src/main/resources/templates/common/sidebar.html
@@ -3,11 +3,8 @@
         <h3 class="section-header">내 계정 관리</h3>
         <ul class="menu-items">
             <li><a href="/customer/shipping_address">배송지 관리</a></li>
-            <li><a href="#">주문 내역</a></li>
-            <li><a href="#">장바구니</a></li>
-            <li><a href="#">위시리스트</a></li>
-            <li><a href="#">결제 정보 관리</a></li>
-            <li><a href="#">회원 정보 수정</a></li>
+            <li><a href="/customer/cart">장바구니</a></li>
+            <li><a href="/customer/wishlist">위시리스트</a></li>
         </ul>
         <div class="divider"></div>
     </div>
