--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${(pageTitle ?: 'No-Title')}"></title>
     <link rel="stylesheet" href="/fonts/Material_Symbols_Outlined.woff2">
-    <link rel="preload" as="style" href="/css/common/noto-sans-kr.css">
+    <link rel="stylesheet" href="/fonts/Material_Symbols_Outlined_Fill.woff2">
     <link rel="stylesheet" href="/css/common/noto-sans-kr.css">
     <link rel="stylesheet" href="/css/common/styles.css">
     <link rel="stylesheet" href="/css/component/category_header_bar.css">
@@ -33,6 +33,7 @@
         <footer th:replace="~{/common/footer}"></footer>
     </div>
     <script th:src="@{/js/common/header.js}"></script>
+    <script th:src="@{/js/common/main.js}"></script>
     <script
         th:src="@{/js/component/search.js(t=${#calendars.format(#calendars.createNow(), 'yyyyMMddHHmmss')})}"></script>
     <th:block th:if="${jsFiles != null}">
