디자인 업데이트

--- a/teamcostco/src/main/resources/static/css/common/styles.css
+++ b/teamcostco/src/main/resources/static/css/common/styles.css
@@ -85,7 +85,7 @@ tbody {
     text-align: center;
     padding: 20px;
     margin-bottom: 30px;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #eef;
 }
 
 .container {
