타임리프 문법 오류 수정

--- a/teamcostco/src/main/resources/templates/customer/cart_list.html
+++ b/teamcostco/src/main/resources/templates/customer/cart_list.html
@@ -2,7 +2,7 @@
 
         <h3 class="content_title">장바구니</h3>
 
-        <div th:replace="~{/common/sidebar}"></div>
+        <div th:replace="~{common/sidebar}"></div>
         <div class="cart_container">
 
             <div class="cart_list">
