--- a/teamcostco/src/main/resources/templates/customer/shipping_address.html
+++ b/teamcostco/src/main/resources/templates/customer/shipping_address.html
@@ -2,7 +2,7 @@
 
     <h3 class="content_title" th:text="${pageTitle}"></h3>
 
-    <div th:replace="~{/common/sidebar}"></div>
+    <div th:replace="~{common/sidebar}"></div>
 
     <div id="content" class="content_section">
         <div class="default_address" th:if="${defaultShippingAddress != null}">
