--- a/teamcostco/src/main/resources/templates/customer/wishlist.html
+++ b/teamcostco/src/main/resources/templates/customer/wishlist.html
@@ -2,7 +2,7 @@
 
     <h3 class="content_title" th:text="${pageTitle}"></h3>
 
-    <div th:replace="~{/common/sidebar}"></div>
+    <div th:replace="~{common/sidebar}"></div>
     <div class="wishlist">
         <div class="wishlist-items">
             <!-- 위시리스트 아이템 반복 -->
