--- a/teamcostco/src/main/resources/templates/product/product_list.html
+++ b/teamcostco/src/main/resources/templates/product/product_list.html
@@ -1,5 +1,5 @@
 <div class="product_list_wrap">
-    <div th:replace="~{/component/filter}"></div>
+    <div th:replace="~{component/filter}"></div>
     <div class="product_list">
         <div class="option_area">
             <select name="size" id="size">
