--- a/teamcostco/src/main/resources/templates/search/search_product.html
+++ b/teamcostco/src/main/resources/templates/search/search_product.html
@@ -1,4 +1,4 @@
 <div class="main_wrap">
     <h3 class="content_title" th:text="${'&quot;' + param.query + '&quot; 에 대한 검색결과'}"></h3>
-    <div th:replace="~{/product/product_list}"></div>
+    <div th:replace="~{product/product_list}"></div>
 </div>
