--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
             <div th:replace="~{${uri}}"></div>
 
         </main>
-        <footer th:replace="~{/common/footer}"></footer>
+        <footer th:replace="~{common/footer::footer}"></footer>
     </div>
     <script th:src="@{/js/common/header.js}"></script>
     <script th:src="@{/js/common/main.js}"></script>
