--- a/teamcostco/src/main/resources/templates/customer/shipping_address.html
+++ b/teamcostco/src/main/resources/templates/customer/shipping_address.html
@@ -46,7 +46,14 @@
                     </div>
                     <div class="form_group">
                         <label for="address">배송 주소</label>
-                        <input type="text" id="address" name="address" required>
+                        <!-- <input type="text" id="address" name="address" required> -->
+
+                        <input type="text" id="sample6_postcode" placeholder="우편번호">
+                        <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
+                        <input type="text" id="sample6_address" placeholder="주소"><br>
+                        <input type="text" id="sample6_detailAddress" placeholder="상세주소">
+                        <input type="text" id="sample6_extraAddress" placeholder="참고항목">
+
                     </div>
                     <div class="form_group">
                         <label for="phone">연락처</label>
@@ -120,3 +127,5 @@
         </div>
     </div>
 </div>
+
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
