--- a/teamcostco/src/main/resources/templates/customer/customer_info.html
+++ b/teamcostco/src/main/resources/templates/customer/customer_info.html
@@ -3,5 +3,46 @@
     
     <div th:replace="~{common/sidebar}"></div>
     
+    <div class="customer_wrap">
+        <div class="info_pannel">내 정보</div>
+        <table class="info_table">
+            <tbody>
+                <tr>
+                    <th>이름</th>
+                    <td>황지영</td>
+                </tr>
+                <tr>
+                    <th>이메일</th>
+                    <td>qwegw0303@naver.com </td>
+                </tr>
+                <tr>
+                    <th>휴대폰</th>
+                    <td>010-9046-0360</td>
+                </tr>
+                <tr>
+                    <th>배송지</th>
+                    <td>서울시 도봉구 시루봉로 555</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="order_pannel">주문목록</div>
+        <div>
+            <div class="input_box">
+                    <input style="width: 40%;" type="text" placeholder="주문하신 상품 검색">
+            </div>
+        </div>
+        <div class="order_box">
+            <div class="product_box">
+                <div class="order_top">
+                    <div class="order_name">배송 완료</div>
+                    <div class="delivery_date">09 - 24 도착</div>
+                </div>
+            </div>
+            <div class="delivery_status">
+                <div>배송조회</div>
+                <div>교환, 반품 신청</div>
+            </div>
+        </div>
+    </div>
 
 </div>
