--- a/teamcostco/src/main/resources/templates/intro/intro.html
+++ b/teamcostco/src/main/resources/templates/intro/intro.html
@@ -27,10 +27,9 @@
     </div>
 
     <!--인기 상품-->
-    <div class="best">
-        <a class="best">노트북</a>
-        <a class="sale">청소기</a>
-        <a class="sale">등등</a>
+
+    <div class="view-all">
+        <a href="#" class="view-all-button">카탈로그 보기</a>
     </div>
 
 
