--- a/teamcostco/src/main/resources/templates/common/footer.html
+++ b/teamcostco/src/main/resources/templates/common/footer.html
@@ -1,35 +1,28 @@
 <footer>
-  <h2>코스트코 고객센터</h2>
+  <h2>팀코스트코 고객센터</h2>
   <div class="column_wrap">
     <div class="column">
-      <h3>코스트코 소개</h3>
+      <h3>팀코스트코 소개</h3>
       <ul>
-        <li><a href="#">코스트코는?</a></li>
-        <li><a href="#">제품분류 &amp; 서비스</a></li>
-        <li><a href="#">채용</a></li>
+        <li><a href="#">팀코스트코는?</a></li>
       </ul>
     </div>
     <div class="column">
-      <h3>코스트코 멤버십</h3>
+      <h3>팀코스트코 멤버십</h3>
       <ul>
-        <li><a href="#">회원가입</a></li>
-        <li><a href="#">회원권 갱신</a></li>
-        <li><a href="#">온라인등록</a></li>
-        <li><a href="#">마이페이지</a></li>
-        <li><a href="#">주문내역</a></li>
-        <li><a href="#">제휴신용카드</a></li>
+        <li><a href="#">미지원</a></li>
       </ul>
     </div>
     <div class="column">
       <h3>고객센터</h3>
       <ul>
-        <li><a href="#">문의(전화/이메일)</a></li>
+        <li><a href="#">문의(010-3063-3062/corip@kakao.com)</a></li>
       </ul>
     </div>
     <div class="column">
       <h3>매장안내</h3>
       <ul>
-        <li><a href="#">매장안내</a></li>
+        <li><a href="#">유령회사</a></li>
       </ul>
     </div>
   </div>
