자주묻는질문 하드코딩

--- a/teamcostco/src/main/resources/templates/common/sidebar.html
+++ b/teamcostco/src/main/resources/templates/common/sidebar.html
@@ -12,7 +12,7 @@
     <div class="menu-section">
         <h3 class="section-header">고객 지원</h3>
         <ul class="menu-items">
-            <li><a href="#">자주 묻는 질문</a></li>
+            <li><a href="/customer/FAQs">자주 묻는 질문</a></li>
             <li><a href="#">1:1 문의</a></li>
             <li><a href="#">공지사항</a></li>
         </ul>
