--- a/teamcostco/src/main/resources/templates/customer/FAQs.html
+++ b/teamcostco/src/main/resources/templates/customer/FAQs.html
@@ -9,10 +9,10 @@
             <input type="text" placeholder="무엇을 도와드릴까요?">
         </div>
         <div class="faq_nav">
-            <button>전체</button>
-            <button>배송</button>
-            <button>서비스</button>
-            <button>회원정보</button>
+            <a class="active">전체</a>
+            <a>배송</a>
+            <a>서비스</a>
+            <a>회원정보</a>
         </div>
         <div class="faq_list">
             <li>[배송] 주문이 이상해요</li>
