상품 주문 모듈 구현

--- a/teamcostco/src/main/resources/templates/product/product_detail.html
+++ b/teamcostco/src/main/resources/templates/product/product_detail.html
@@ -62,7 +62,7 @@
                         Favorite
                     </span>
                 </button>
-                <button class="buy_button">구매하기</button>
+                <button class="buy_button" th:data-product-code="${product.product_code}">구매하기</button>
                 <button class="cart_button">장바구니에 추가</button>
             </div>
         </div>
