--- a/teamcostco/src/main/resources/templates/purchase/purchase.html
+++ b/teamcostco/src/main/resources/templates/purchase/purchase.html
@@ -36,7 +36,7 @@
                             th:value="${default_shipping.detail_address ?: ''}" placeholder="상세주소">
                     </div>
                     <div class="input-box">
-                        <input type="text" id="phone_number" name="phone_number" placeholder="연락처">
+                        <input type="text" id="recipient_phone_number" name="phone_number" placeholder="연락처">
                     </div>
                 </div>
                 <div class="section-title">배송 요청사항</div>
@@ -84,6 +84,10 @@
                         <span>할인금액</span>
                         <span th:text="${#numbers.formatInteger(totalDiscount, 0, 'COMMA')} + '원'"></span>
                     </p>
+                    <p>
+                        <span>배송비</span>
+                        <span th:text="${totalPrice >= 50000} ? '0원' : '3,000원'"></span>
+                    </p>
                     <p class="total">
                         <span>총 결제금액</span>
                         <span th:text="${#numbers.formatInteger(finalPrice, 0,'COMMA')} + '원'"></span>
@@ -94,7 +98,7 @@
                     <div class="section-title">결제수단</div>
                     <div class="input-box">
                         <div class="payment_method_item">
-                            <input type="radio" name="payment-method" checked>
+                            <input type="radio" name="payment-method" value="bank_transfer" checked>
                             <label for="payment-method">무통장입금</label>
                         </div>
                     </div>
@@ -107,3 +111,8 @@
 </div>
 
 <script src="http://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var productList = [[${items}]];
+    /*]]>*/
+</script>
